<resources>
    <string name="app_name">Foodie</string>
    <string name="logo">logo</string>
    <string name="general_error">Ups! un error inesperado ha ocurrido</string>


    <!-- Login Activity -->
    <string name="goto_register">Registrate ahora!</string>
    <string name="tv_user_not_registered">¿Sos nuevo en Foodie? %1$s</string>

    <string name="tv_federated_login">Iniciar sesión con Redes Sociales</string>
    <string name="btn_log_in">Iniciar Sesión</string>

    <!-- Login and Register -->
    <string name="hint_email_et">Email</string>
    <string name="hint_password_et">Contraseña</string>

    <!-- Register Activity -->
    <string name="hint_name_et">Nombre</string>
    <string name="hint_last_name_et">Apellido</string>
    <string name="hint_confirm_password_et">Confirmar Contraseña</string>
    <string name="hint_phone_et">Teléfono</string>
    <string name="btn_register">Registrarse</string>

    <!-- Welcome Slides -->
    <string name="first_welcome_title">Bienvenido a Foodie!</string>
    <string name="first_welcome_description">Foodie es la aplicacion que te permite acceder al pedido que quieras de manera más simple!</string>
    <string name="second_welcome_title">Podés elegir entre ser Cliente o Delivery</string>
    <string name="chip_customer_type">Cliente</string>
    <string name="chip_delivery_type">Delivery</string>
    <string name="third_welcome_title">Suscribite al Plan Premium para poder contar con los siguientes beneficios</string>
    <string name="subscribe">Subscribirse</string>
    <string name="unsubscribe">Desuscribirse</string>

    <string name="profile_btn">Perfil</string>
    <string name="map_place_choice">Pedido</string>
    <string name="location">Necesitamos acceder a tu ubicación</string>
    <string name="orders">Pedidos</string>
    <string name="confirm_order">Completar Pedido</string>
    <string name="general_success">Operación Exitosa!</string>
    <string name="default_notification_channel_id">default notification channel</string>
    <string name="chat_message_margin">a</string>

    <string name="btn_send_token">Enviar token</string>
    <string name="btn_forgot_password">Olvidaste la contraseña?</string>
    <string name="hint_token">Token</string>
    <string name="btn_update_password">Actualizar contraseña</string>
    <string name="put_token">Introducir token</string>

    <!-- Profile -->
    <string name="email_title">Email</string>
    <string name="phone_title">Telefono</string>
    <string name="deliveries_title">Deliveries Realizados</string>
    <string name="sent_msg_title">Mensajes Enviados</string>

    <!-- Orders -->
    <string name="pending_orders">Pendientes</string>
    <string name="completed_orders">Completadas</string>
    <string name="order_actions">Acciones</string>
    <string name="deliver_order">Entregar</string>
    <string name="unassign_order">Desasignarme</string>
    <string name="assign_order">Asignar Delivery</string>
    <string name="cancel_order">Cancelar Pedido</string>
    <string name="chat_order">Chat</string>
    <string name="empty_order_list">No hay Pedidos</string>
    <string name="payment_method_label">Método de pago</string>
    <string name="cash_method_label">Pago Efectivo</string>
    <string name="card_method_label">Pago con Tarjeta</string>
    <string name="owner_title">Propietario</string>
    <string name="place_name_title">Lugar</string>
    <string name="products_title">Productos</string>
    <string name="payment_method_title">Método de Pago</string>
    <string name="btn_confirm_changes">Confirmar</string>
    <string name="follow_deliver">Mapa</string>
    <string name="order_price_label">$%.2f</string>
    <string name="productos">Productos</string>
    <string name="decrement_button">-</string>
    <string name="increment_button">+</string>
    <string name="favour_method_label">Favor</string>
    <string name="confirm_order_btn">Confirmar Pedido</string>
    <string name="confirm_delivery">Confirmar Delivery</string>
    <string name="choose_delivery_hint">Elige un delivery</string>
    <string name="choose_place_hint">Elige tu restaurante favorito</string>
    <string name="order_name_title">Nombre</string>
    <string name="delivery_title">Delivery</string>
    <string name="pedidos_nav">Pedidos</string>
    <string name="pedir_nav">Pedir</string>
    <string name="perfil_nav">Perfil</string>
    <string name="editar_perfil">Editar Perfil</string>
    <string name="cerrar_sesi_n">Cerrar Sesión</string>
    <string name="navegacion_option">Navegación</string>
    <string name="centrar_camara">Centrar</string>
    <string name="calificar_delivery">Calificar Delivery</string>
    <string name="calificar_propietario">Calificar Propietario</string>
    <string name="calificar">Calificar</string>
    <string name="order_gratitude_points_title">Puntos de Gratitud</string>
    <string name="favour_orders">Favores</string>

</resources>
