<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/btn_nav_orders"
        android:enabled="true"
        android:icon="@drawable/baseline_local_grocery_store_24"
        android:title="@string/pedidos_nav"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/btn_nav_order_something"
        android:enabled="true"
        android:icon="@drawable/baseline_fastfood_24"
        android:title="@string/pedir_nav"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/btn_nav_profile"
        android:enabled="true"
        android:icon="@drawable/baseline_person_24"
        android:title="@string/perfil_nav"
        app:showAsAction="ifRoom" />
</menu>