<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/order_data_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.OrderDataActivity">

    <RadioGroup
        android:id="@+id/payment_method_radio"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:buttonTint="@android:color/background_dark"
        android:orientation="horizontal"
        android:text="@string/payment_method_label"
        android:textColor="@android:color/background_dark">

        <RadioButton
            android:id="@+id/cash_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@android:color/background_dark"
            android:text="@string/cash_method_label"
            android:textColor="@android:color/background_dark" />

        <RadioButton
            android:id="@+id/card_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@android:color/background_dark"
            android:text="@string/card_method_label"
            android:textColor="@android:color/background_dark" />

        <RadioButton
            android:id="@+id/favour_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@android:color/background_dark"
            android:text="@string/favour_method_label"
            android:textColor="@android:color/background_dark" />
    </RadioGroup>

    <Button
        android:id="@+id/make_order_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/confirm_order_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>