<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/orders_context"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.tabs.TabLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pending_orders" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/completed_orders" />

    </com.google.android.material.tabs.TabLayout>

    <ListView
        android:id="@+id/order_rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </ListView>

    <TextView
        android:id="@+id/empty_order_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/empty_order_list"
        android:textAlignment="center"
        android:textSize="24sp"
        android:visibility="gone" />
</LinearLayout>