<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/token_layout">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/context_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/linear_gradient"
        android:theme="@style/AppTheme"
        android:isScrollContainer="true"
        app:layout_constraintVertical_chainStyle="packed"
        tools:context=".ui.TokenActivity">

        <include
            android:id="@+id/include3"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />

        <LinearLayout
            android:id="@+id/header_layout"
            android:layout_width="375dp"
            android:layout_height="182dp"
            android:layout_marginTop="272dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.169">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_field_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_field"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/hint_email_et"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_send_token"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="5dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/raleway"
                android:text="@string/btn_send_token"
                android:onClick="sendRecoveryToken"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_put_token"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="5dp"
                android:fontFamily="@font/raleway"
                android:text="@string/put_token"
                android:onClick="tokenPasswordPage"/>

        </LinearLayout>

        <ProgressBar
            android:id="@+id/loading_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:indeterminateTint="@android:color/white"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/btn_right"
            app:layout_constraintEnd_toEndOf="@id/btn_right"
            app:layout_constraintStart_toStartOf="@id/btn_right"
            app:layout_constraintTop_toTopOf="@id/btn_right" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>